Extra padding to make sure nothing is hidden behind the toolbar buttons

--- a/client/main.css
+++ b/client/main.css
@@ -78,7 +78,7 @@ button[disabled] {
 }
 
 #main > div {
-    margin-bottom: 3em;
+    margin-bottom: 5em;
 }
 
 #login-form.login-container {
